# RemoteControlHumanoidRobot

./: .gitmodules  404.html  LICENSE  Notice.md  README.md  index.html  mkdocs.yml  sitemap.xml
Application Protocol/: index.html
Application Protocol/Application Protocol/: index.html
Application Protocol/Control Query/: index.html
Application Protocol/Execution Mode/: index.html
Application Protocol/Identification Query/: index.html
Application Protocol/MCU Information/: index.html
Application Protocol/Move All Query/: index.html
Application Protocol/Protocol Definition/: index.html
Application Protocol/Robot Selection/: index.html
Application Protocol/Server Shutdown/: index.html
Application Protocol/Servo Movement/: index.html
Application Protocol/Upload Information/: index.html
Demo Showcase/: index.html
FirebaseSolution/: README.md
License/License/: index.html
ServerSolution/: README.md
ServerSolution/Client/: CMakeLists.txt
ServerSolution/Client/lib/GUI/: CMakeLists.txt
ServerSolution/Client/lib/robot_ctrl_iface/: CMakeLists.txt
ServerSolution/Server/: CMakeLists.txt  Server.cpp
ServerSolution/Server/controllers/: CMakeLists.txt  dbman.cpp  queryGenerator.cpp  queryGenerator.h  serverLogic.cpp  serverLogic.h  srvCore.cpp  srvCore.h
ServerSolution/TestClient/: Client.cpp  Client.h  main.cpp
ServerSolution/TestMCU/: main.cpp
ServerSolution/TestMCU/.devcontainer/: devcontainer.json
assets/javascripts/: bundle.13a4f30d.min.js
codeMCU/: README.md
codeMCU/robotControl_Calibration/: Servo_Calibration.ino  calib.ino
codeMCU/robotControl_Firebase/directConnection/: robotControl.ino
codeMCU/robotControl_Server/: robotControl.ino  robotControl_ESP32.ino  servoCalibration.h
demos/Demo Showcase/: index.html
demos/Platform Showcase/: index.html
demos/UE5 Module Showcase/: index.html
docs/: index.md
docs/Application Protocol/: Control Query.md  Execution Mode.md  Identification Query.md  MCU Information.md  Move All Query.md  Protocol Definition.md  Robot Selection.md  Server Shutdown.md  Servo Movement.md  Upload Information.md
docs/demos/: Demo Showcase.md  Platform Showcase.md  UE5 Module Showcase.md
docs/stylesheets/: extra.css
search/: search_index.json
stylesheets/: extra.css
